[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Pages/Main.gd" type="Script" id=2]
[ext_resource path="res://src/Actors/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Wall.png" type="Texture" id=4]
[ext_resource path="res://src/Other/HUD.tscn" type="PackedScene" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=2]
0/name = "Wall.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 129.543, 111.143 )

[node name="Enemies_Container" type="Node2D" parent="."]

[node name="Enemy" parent="Enemies_Container" instance=ExtResource( 3 )]
position = Vector2( 549.335, 173.673 )

[node name="Enemy2" parent="Enemies_Container" instance=ExtResource( 3 )]
position = Vector2( 194.367, 332.772 )

[node name="Enemy3" parent="Enemies_Container" instance=ExtResource( 3 )]
position = Vector2( 503.048, 437.345 )

[node name="Wall" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
collision_layer = 4
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 65536, 0, 0, 65560, 0, 0, 131072, 0, 0, 131096, 0, 0, 196608, 0, 0, 196632, 0, 0, 262144, 0, 0, 262168, 0, 0, 327680, 0, 0, 327704, 0, 0, 393216, 0, 0, 393240, 0, 0, 458752, 0, 0, 458776, 0, 0, 524288, 0, 0, 524312, 0, 0, 589824, 0, 0, 589848, 0, 0, 655360, 0, 0, 655384, 0, 0, 720896, 0, 0, 720920, 0, 0, 786432, 0, 0, 786456, 0, 0, 851968, 0, 0, 851992, 0, 0, 917504, 0, 0, 917528, 0, 0, 983040, 0, 0, 983064, 0, 0, 1048576, 0, 0, 1048600, 0, 0, 1114112, 0, 0, 1114136, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[connection signal="change_hp_progress" from="Player" to="HUD" method="_on_Player_change_hp_progress"]
[connection signal="change_hp_progress" from="Player" to="." method="_on_Player_change_hp_progress"]
[connection signal="die" from="Player" to="." method="_on_Player_die"]
[connection signal="shoot" from="Player" to="." method="_on_Player_shoot"]
[connection signal="die" from="Enemies_Container/Enemy" to="." method="_on_Enemy_die"]
[connection signal="shoot" from="Enemies_Container/Enemy" to="." method="_on_Enemy_shoot"]
[connection signal="die" from="Enemies_Container/Enemy2" to="." method="_on_Enemy_die"]
[connection signal="shoot" from="Enemies_Container/Enemy2" to="." method="_on_Enemy_shoot"]
[connection signal="die" from="Enemies_Container/Enemy3" to="." method="_on_Enemy_die"]
[connection signal="shoot" from="Enemies_Container/Enemy3" to="." method="_on_Enemy_shoot"]
